# mahe_mobility_challenge

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  dev.sh  start.sh  start_vlm.sh
mini_r1_v1_application/: CMakeLists.txt  package.xml  rviz_plugins.xml
mini_r1_v1_application/config/: behavior_config.yaml  marker_detector.yaml
mini_r1_v1_application/include/mini_r1_v1_application/: mission_control_panel.hpp  navigator_status_panel.hpp
mini_r1_v1_application/prompts/: navigation.txt
mini_r1_v1_application/scripts/: dynamic_obstacle_node.py  marker_detector_node.py  maze_navigator_node.py  mission_zone_node.py  vlm_brain_node.py  vlm_config.py  vlm_dashboard.py  vlm_tools.py
mini_r1_v1_application/scripts/nav_lib/: behaviors.py  config_loader.py  detectors.py  sensor_state.py  state_machine.py
mini_r1_v1_application/scripts/vlm_static/: index.html
mini_r1_v1_application/src/: mission_control_panel.cpp  navigator_status_panel.cpp
mini_r1_v1_bringup/: package.xml  setup.cfg  setup.py
mini_r1_v1_bringup/config/: ekf.yaml
mini_r1_v1_bringup/docs/: project_reference.md
mini_r1_v1_bringup/launch/: bringup.launch.py
mini_r1_v1_description/: CMakeLists.txt
mini_r1_v1_description/urdf/: lidar.xacro
mini_r1_v1_description/worlds/: custom_building_v2.building.yaml  download_models.py  generate_markers_and_signs.py  multi_floor_college.building.yaml  output.world
mini_r1_v1_description/worlds/models/multi_floor_college_floor_0/: model.config  model.sdf
mini_r1_v1_description/worlds/models/multi_floor_college_floor_0/meshes/: floor_1.mtl  model.material  wall_1.mtl
mini_r1_v1_description/worlds/models/multi_floor_college_ground/: model.config  model.sdf
mini_r1_v1_description/worlds/models/multi_floor_college_ground/meshes/: model.material
mini_r1_v1_gz/: CMakeLists.txt  package.xml  plugin_description.xml
mini_r1_v1_gz/config/: costmap.yaml  ros_gz_bridge.yaml
mini_r1_v1_gz/include/mini_r1_v1_gz/: teleop_panel.hpp
mini_r1_v1_gz/launch/: sim.launch.py
mini_r1_v1_gz/rviz/: sim.rviz
mini_r1_v1_gz/src/: teleop_panel.cpp
rmf_traffic_editor/rmf_traffic_editor/: CMakeLists.txt
